Completed Services andd added exceptional handler.